# GCF_with3N

./: .gitignore
src/: CMakeLists.txt
src/include/constants/: nuclearMasses.hh
src/libraries/fsi/: GenieFSIHelpers.cc  GenieFSIHelpers.hh
src/libraries/generator/: gcfGenerator.cc  gcfGenerator.hh
src/libraries/nucleus/: gcfNucleus.cc  gcfNucleus.hh
src/programs/genQE/: CMakeLists.txt  INukeNNData.cc  INukeNNData.hh  PHYSICS.tex  QEGenerator.cc  QEGeneratorFSI.cc  QEGeneratorFSI.hh  SRC_analysis_2N.cpp  SimpleFSIHandler.hh  epp_plots.py  genQE.cc  genQE_FSI.cc  plot_SRC_analysis_2N.py
src/programs/genQE _FSI/: CMakeLists.txt  INukeNNData.cc  genQE.cc  quiet_messenger.xml
src/programs/genQE_3N/: CMakeLists.txt  PHYSICS.tex  QEGeneratorFSI_3N.cc  QEGeneratorFSI_3N.hh  QEGenerator_3N.cc  QEGenerator_3N.hh  README_output_organization.md  genQE_3N.cc  genQE_3N_FSI.cc  plot_3N_2N_ratio.py  plot_stacked_ratios.py  plot_weight_dist.py  plot_xB_pmiss_heatmaps.py  run_3N_parallel.sh  theta_heatmap_plot_2.py  theta_plot_2.cpp  theta_plot_fast.cpp  theta_scan.cpp  theta_scan_plot.py  xB_Q2_heatmap_plot.py
src/programs/genQE_3N/analysis/: SRC_analysis_3N.cpp  analyze_3N.py  plot_all_heatmaps.py  theta_plot.cpp
src/programs/genQE_3N/analysis/Plots/: region_fractions.txt
src/programs/genQE_3N/plotting/: paper_style.py  plot_1D_histograms.py  plot_R_xL.py  plot_fig2_momenta_by_config.py  plot_fig4_xB_by_config.py  plot_fig5_theta_heatmap_pair.py  plot_fig6_R_xL.py  plot_momenta.py  plot_region_L_distributions.py  plot_theta_heatmap_3N_FSI.py  plot_theta_heatmap_3N_FSI_2NLike.py  plot_theta_heatmap_3N_vs_2N.py  plot_theta_heatmap_kgrid.py  plot_theta_heatmap_paper.py  plot_theta_heatmap_sinelaw.py  plot_xB_Q2_heatmaps.py  plot_xB_pmiss_heatmaps.py  regions.py  report_region_weights.py
src/programs/genQE_FSI/: CMakeLists.txt  INukeNNData.hh  PHYSICS.tex  QEGenerator.hh  QEGeneratorFSI.cc  QEGeneratorFSI.hh  README_FSI.md  SRC_analysis_2N.cpp  SimpleFSIHandler.cc  events_2N.root.meta.txt  genQE_EIC.cc  genQE_FSI.cc  run_SRC.sh  test_fsi_integration.sh  theta_heatmap_plot_2N.py
src/programs/genQE_FSI/Acceptance/: clas6acceptance.C
src/programs/genQE_FSI/Generator-R-3_06_02/: Makefile
src/programs/genQE_FSI/Generator-R-3_06_02/config/: Messenger.xml
src/programs/genQE_FSI/Generator-R-3_06_02/lib/: libGFwAlg-3.06.02.dylib  libGFwEG-3.06.02.dylib  libGFwGHEP-3.06.02.dylib  libGFwGHEP.dylib  libGFwInt-3.06.02.dylib  libGFwInt.dylib  libGFwMsg-3.06.02.dylib  libGFwMsg_rdict.pcm  libGFwNtp-3.06.02.dylib  libGFwNtp_rdict.pcm  libGFwNum-3.06.02.dylib  libGFwParDat-3.06.02.dylib  libGFwParDat.dylib  libGFwReg-3.06.02.dylib  libGFwReg.dylib  libGFwReg.rootmap  libGFwReg_rdict.pcm  libGFwUtl-3.06.02.dylib  libGPhAMNGEG-3.06.02.dylib  libGPhAMNGEG_rdict.pcm  libGPhAMNGXS-3.06.02.dylib  libGPhAMNGXS.dylib  libGPhAMNGXS_rdict.pcm  libGPhChmXS-3.06.02.dylib  libGPhChmXS.dylib  libGPhChmXS_rdict.pcm  libGPhCmn-3.06.02.dylib  libGPhCohEG-3.06.02.dylib  libGPhCohEG_rdict.pcm  libGPhCohXS-3.06.02.dylib  libGPhDISEG-3.06.02.dylib  libGPhDISXS-3.06.02.dylib  libGPhDcy-3.06.02.dylib  libGPhDcy.dylib  libGPhDeEx-3.06.02.dylib  libGPhDeEx_rdict.pcm  libGPhDfrcEG-3.06.02.dylib  libGPhDfrcXS-3.06.02.dylib  libGPhHELptnEG-3.06.02.dylib  libGPhHELptnEG_rdict.pcm  (+40 more)
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Algorithm/: _ROOT_DICT_FwAlg.cc  libGFwAlg_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Conventions/: GBuild.h  GVersion.h
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/EventGen/: _ROOT_DICT_FwEG.cc  libGFwEG_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/GHEP/: _ROOT_DICT_FwGHEP.cc  libGFwGHEP_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Interaction/: _ROOT_DICT_FwInt.cc  libGFwInt.rootmap  libGFwInt.rootmap.bak  libGFwInt_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Messenger/: _ROOT_DICT_FwMsg.cc
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Ntuple/: _ROOT_DICT_FwNtp.cc
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Numerical/: _ROOT_DICT_FwNum.cc  libGFwNum_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/ParticleData/: _ROOT_DICT_FwParDat.cc  libGFwParDat_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Registry/: _ROOT_DICT_FwReg.cc  libGFwReg.rootmap.bak
src/programs/genQE_FSI/Generator-R-3_06_02/src/Framework/Utils/: _ROOT_DICT_FwUtl.cc  libGFwUtl_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/Common/: _ROOT_DICT_PhCmn.cc  libGPhCmn_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/Decay/: _ROOT_DICT_PhDcy.cc  libGPhDcy_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/HadronTensors/: _ROOT_DICT_PhHadTens.cc  libGPhHadTens_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/HadronTransport/: _ROOT_DICT_PhHadTransp.cc  libGPhHadTransp_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/Hadronization/: _ROOT_DICT_PhHadnz.cc  libGPhHadnz_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/MuonEnergyLoss/: _ROOT_DICT_PhMEL.cc
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/NuclearDeExcitation/: _ROOT_DICT_PhDeEx.cc
src/programs/genQE_FSI/Generator-R-3_06_02/src/Physics/NuclearState/: _ROOT_DICT_PhNuclSt.cc  libGPhNuclSt_rdict.pcm
src/programs/genQE_FSI/Generator-R-3_06_02/src/make/: Make.config  Make.config_no_paths
src/programs/genQE_FSI/analysis/: SRC_analysis_2N.cpp  analyze_2N.py  clas_acceptance.py  natalie_paper_plots.py  plot_R_xL.py
src/programs/genQE_FSI/analysis/plots/mf_fake3n/: region_fractions.txt
src/programs/genQE_FSI/analysis/plots/mf_fake3n_srccuts/: region_fractions.txt
src/programs/genQE_FSI/config/genie_override/: HAIntranuke2018.xml  HNIntranuke2018.xml  Messenger.xml
src/programs/genQE_FSI/plotting/: plot_SRC_analysis_2N.py  plot_mf_fake3n_heatmap.py  plot_momenta_N3.py  plot_region_kinematics.py  plot_theta_heatmap_2N.py  region_LR_fractions.py
(+38 files in other folders)
